exports[`CopyPopover component should render when supplied a string to copy 1`] = `
<span
  className="popover__group"
  onClick={[Function]}>
  <a
    className="actionLink"
    onClick={[Function]}
    style={Object {}}
    title="">
    Click me!
  </a>
  <div
    className="popover copyPopover popover--l popover--rightAligned popover--bottom">
    <h6
      className="text--left copyPopover__label">
      <i
        className="fa fa-check-circle" />
       Copied to Clipboard!
    </h6>
    <input
      className="input__text input__text--s copyPopover__input"
      readOnly={true}
      value="Copy me!" />
  </div>
</span>
`;

exports[`CopyPopover component should render when supplied a string to copy and styling props 1`] = `
<span
  className="popover__group h-block"
  onClick={[Function]}>
  <a
    className="actionLink"
    onClick={[Function]}
    style={Object {}}
    title="">
    Click me!
  </a>
  <div
    className="popover copyPopover popover--l popover--rightAligned popover--top">
    <h6
      className="text--left copyPopover__label">
      <i
        className="fa fa-check-circle" />
       Copied to Clipboard!
    </h6>
    <input
      className="input__text input__text--s copyPopover__input"
      readOnly={true}
      value="Copy me!" />
  </div>
</span>
`;

exports[`CopyPopover component should render with only children prop 1`] = `
<span
  className="popover__group"
  onClick={[Function]}>
  <a
    className="actionLink"
    onClick={[Function]}
    style={Object {}}
    title="">
    Click me!
  </a>
  <div
    className="popover copyPopover popover--l popover--rightAligned popover--bottom">
    <h6
      className="text--left copyPopover__label">
      <i
        className="fa fa-check-circle" />
       Copied to Clipboard!
    </h6>
    <input
      className="input__text input__text--s copyPopover__input"
      readOnly={true}
      value="http://localhost/" />
  </div>
</span>
`;
